# reproducibility-experiments

./: .gitignore
.github/workflows/: reproducibility.yml
gpui/: Cargo.toml  flake.nix
gpui/src/: main.rs
swiftui/: README.md  flake.nix
swiftui-minimal/: README.md  flake.nix
swiftui-minimal/src/: content.swift
swiftui-package/: Package.swift  README.md  flake.nix
swiftui-package/Sources/MinimalSwiftUI/: App.swift
swiftui-xcode/: .gitignore  README.md  flake.nix
swiftui-xcode/MinimalSwiftUI.xcodeproj/: project.pbxproj
swiftui-xcode/MinimalSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/mike.xcuserdatad/: UserInterfaceState.xcuserstate
swiftui-xcode/MinimalSwiftUI.xcodeproj/xcuserdata/mike.xcuserdatad/xcschemes/: xcschememanagement.plist
swiftui-xcode/src/: ContentView.swift
